--- a/custom_bootloader/User app/Blinking_led.ioc
+++ b/custom_bootloader/User app/Blinking_led.ioc
@@ -72,9 +72,9 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Blinking_led.ioc
 ProjectManager.ProjectName=Blinking_led
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=MDK-ARM V5
+ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
