--- a/custom_bootloader/custom_bootloader/custom_bootloader.ioc
+++ b/custom_bootloader/custom_bootloader/custom_bootloader.ioc
@@ -81,9 +81,9 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=custom_bootloader.ioc
 ProjectManager.ProjectName=custom_bootloader
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=MDK-ARM V5
+ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
